--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\roast duck.jpg" class="portfolio-box">
+                    <a href="img\portfolio\fullsize\roast duck.png" class="portfolio-box">
                         <img src="img\portfolio\thumbnails\roast duck.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
