--- a/index.html
+++ b/index.html
@@ -182,38 +182,38 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img\portfolio\fullsize\roast duck.png" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\roast duck.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img\portfolio\fullsize\hotpot.jpg" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\hotpot.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="img\portfolio\fullsize\honshaopork.jpg" class="portfolio-box">
                         <img src="img\portfolio\thumbnails\honshaopork.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\mapotofu.jpg" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\mapotofu.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\roast duck.png" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\roast duck.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -242,8 +242,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\hotpot.jpg" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\hotpot.jpg" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\mapotofu.jpg" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\mapotofu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
