second image update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Start Discover</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Sichuan</h3>
                         <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                     </div>
@@ -182,8 +182,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\roast duck.png" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\roast duck.png" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\roastduck.jpg" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\roastduck.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
