--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\friedRice.png" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\friedRice.png" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\friedRice.PNG" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\friedRice.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -182,8 +182,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\roastduck.png" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\roastduck.png" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\roastduck.PNG" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\roastduck.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -212,8 +212,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\honshaopork.jpg" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\honshaopork.jpg" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\hongshaopork.PNG" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\hongshaopork.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
