--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img\portfolio\fullsize\hongshaopork.png" class="portfolio-box">
-                        <img src="img\portfolio\thumbnails\hongshaopork.png" class="img-responsive" alt="">
+                    <a href="img\portfolio\fullsize\hongshaopork.PNG" class="portfolio-box">
+                        <img src="img\portfolio\thumbnails\hongshaopork.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
