--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Fried Rice
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Roast Duck
                                 </div>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Hotpot
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Hongshao Ribs
                                 </div>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Small Steamed Bun
                                 </div>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mapo Tofu
                                 </div>
                             </div>
                         </div>
