--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish I
                                 </div>
                                 <div class="project-name">
                                     Fried Rice
@@ -187,7 +187,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish II
                                 </div>
                                 <div class="project-name">
                                     Roast Duck
@@ -202,7 +202,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish III
                                 </div>
                                 <div class="project-name">
                                     Hotpot
@@ -217,7 +217,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish IV
                                 </div>
                                 <div class="project-name">
                                     Hongshao Ribs
@@ -232,7 +232,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish V
                                 </div>
                                 <div class="project-name">
                                     Small Steamed Bun
@@ -247,7 +247,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Dish VI
                                 </div>
                                 <div class="project-name">
                                     Mapo Tofu
@@ -266,17 +266,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Do you enjoy it ?</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p> Share your idea about chinese cuisines. If you have any question send me an email and I will reply it back as soon as possible!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>123-456-6789</p>
-                </div>
+                </div> --> -->
+
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">az512449128@gmail.com</a></p>
                 </div>
             </div>
         </div>
