--- a/index.html
+++ b/index.html
@@ -107,56 +107,56 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Zhejiang</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Sichuan</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Fujian</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Jiangsu</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Hunan</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Anhui</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Guandong</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa fa-cutlery text-primary sr-icons"></i>
                         <h3>Shangdong</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+
                     </div>
                 </div>
             </div>
@@ -268,12 +268,12 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Do you enjoy it ?</h2>
                     <hr class="primary">
-                    <p> Share your idea about chinese cuisines. If you have any question send me an email and I will reply it back as soon as possible!</p>
+                    <p> Share your idea about chinese cuisines. If you have any question send me an phonecall or an email and I will reply it back as soon as possible!</p>
                 </div>
-                <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
+               <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div> --> -->
+                    <p>646-701-2116</p>
+                </div>
 
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
