Final description FIX

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Do you enjoy it ?</h2>
                     <hr class="primary">
-                    <p> Share your idea about chinese cuisines. If you have any question send me an phonecall or an email and I will reply it back as soon as possible!</p>
+                    <p> Share your idea about chinese cuisines. This is the online project for CSE199. If you have any question related to this topic, feel free to send a phonecall or an email.</p>
                 </div>
                <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
