--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Chinese Cuisine Introduction</h1>
                 <hr>
-                <p>Start to explore the Chinese cuisines!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Let's Find Out More</a>
             </div>
         </div>
     </header>
