--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta name="author" content="">
 
 
-
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    
     <title>Chinese Cuisine</title>
 
     <!-- Bootstrap Core CSS -->
