--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Chinese Cuisine</title>
 
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="img\favicon-16x16.png" sizes="16x16" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
