--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Descrption of Chinese cuisines</h2>
+                    <h2 class="section-heading">Descrption of Chinese Cuisine</h2>
                     <hr class="light">
                     <p class="text-faded">Chinese cuisine includes styles were from different diverse regions of China. The history of Chinese cuisines has been changed time to time. And in each region, climate, local preferences are creating these unqiue tasty food. Chinese food has diversified color, fragrant smell and excellent taste as its main feature.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
