--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Galleries</a>
                     </li>
-                    
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -269,7 +269,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Do you enjoy it ?</h2>
                     <hr class="primary">
-                    <p> Share your idea about chinese cuisines. This is the online project for CSE199. If you have any question related to this topic, feel free to send a phonecall or an email.</p>
+                    <p> Share your idea about Chinese cuisines. This is the online project for CSE199. If you have any question about Chinese Cuisine, feel free to send me a phonecall or an email.</p>
                 </div>
                <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
